# completeAI

cortexAI/backend/: pyproject.toml  test_api_scraper.py
cortexAI/backend/gateway/: .env  main.py  pyproject.toml
cortexAI/backend/gateway/controllers/: user.py
cortexAI/backend/gateway/middleware/: auth.py
cortexAI/backend/gateway/utils/: cors.py  proxy.py
cortexAI/backend/services/agent/: main.py
cortexAI/backend/services/agent/agents/: chat_agent.py  coding_agent.py  imageAnalyser_agent.py  image_agent.py  pdfRag_agent.py  pdf_agent.py  ppt_agent.py  search_agent.py
cortexAI/backend/services/agent/config/: agentLimit.py  aws_bucketHandler.py  db.py  embeddings.py  file_upload.py  llmModels.py  memory.py  tavily.py  vectorDb.py
cortexAI/backend/services/agent/controllers/: agent_Controller.py  chat.py
cortexAI/backend/services/agent/graph/: graph.py  router.py  state.py
cortexAI/backend/services/agent/models/: message.py
cortexAI/backend/services/agent/routes/: agent_Route.py  chat.py
cortexAI/backend/services/agent/tests/: test_agent_controller.py  test_router.py  test_upload.py
cortexAI/backend/services/agent/utils/: deductCredits.py  generatePdf.py  generatePpt.py  getFrom_AWS.py  getMessages.py  upload_AWS.py
cortexAI/backend/services/auth/: .env  main.py  pyproject.toml  serviceAccountKey.json
cortexAI/backend/services/auth/config/: db.py  firebase.py
cortexAI/backend/services/auth/controllers/: auth.py
cortexAI/backend/services/auth/models/: user.py
cortexAI/backend/services/auth/routes/: user_router.py
cortexAI/backend/services/auth/tests/: test_user_payment.py
cortexAI/backend/services/billing/: main.py
cortexAI/backend/services/billing/config/: Plans.py  db.py  razorpay.py
cortexAI/backend/services/billing/controllers/: billing_controller.py
cortexAI/backend/services/billing/models/: paymentModel.py
cortexAI/backend/services/billing/routes/: billing.py
cortexAI/backend/services/chat/: main.py
cortexAI/backend/services/chat/config/: db.py
cortexAI/backend/shared/: pyproject.toml
cortexAI/backend/shared/redis/: redis.py
cortexAI/backend/shared/shared.egg-info/: PKG-INFO  SOURCES.txt
(+35 files in other folders)
