[project]
name = "backend"
version = "0.1.0"
description = "CortexAI Backend Core Root"
requires-python = ">=3.12"
dependencies = [
    # Gateway dependencies
    "fastapi>=0.139.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    # Auth Service dependencies
    "beanie>=2.1.0",
    "motor>=3.7.1",
    "pymongo>=4.17.0",
    "firebase-admin>=7.5.0",
    # Shared / Common dependencies
    "redis>=8.0.1",
    #agents
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    "langchain-groq>=1.1.3",
    "langchain-google-genai>=4.2.7",
]

# This lets uv know it should treat the whole backend folder as the single search path
[tool.uv]
dev-dependencies = []
