[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "fastapi>=0.139.1",
    "firebase-admin>=7.5.0",
    "motor>=3.7.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
